# stuff

CourseraAlgorithms/Percolates/src/: Percolation.java  PercolationStats.java
build_env/: gtestConfig.sh  redisConfig.sh
pythonProjects/stuff/qustodio/: .crawler.py.swp  TestQuestion2.py  crawler.py  emirp.py  foobar.py  monkeySong.py  pythonExercisesQustodio.tar  t1.py  teaParty.py
pythonProjects/stuff/qustodio/inputs/: testCrawler.txt  testEmirp.txt  testTeaParty.txt
pythonProjects/stuff/tutorial/tutorial/: items.json  items.py  models.py  pipelines.py  settings.py
pythonProjects/stuff/tutorial/tutorial/spiders/: recetas.py
sampleGtest/: SquareRoot.cpp  tests.cpp
wordCount/: .gitignore  CMakeLists.txt  DataTypes.cpp  DataTypes.h  DataTypesTest.cpp  WordCount.cpp  WordCount.h
